@@ -21,7 +21,7 @@ namespace Fixtures.Azure.AcceptanceTestsAzureBodyDuration
     /// <summary>
     /// Test Infrastructure for AutoRest
     /// </summary>
-    public partial interface IAutoRestDurationTestService
+    public partial interface IAutoRestDurationTestService : IDisposable
     {
         /// <summary>
         /// The base URI of the service.
