@@ -21,7 +21,7 @@ namespace Fixtures.Azure.AcceptanceTestsAzureParameterGrouping
     /// <summary>
     /// Test Infrastructure for AutoRest
     /// </summary>
-    public partial interface IAutoRestParameterGroupingTestService
+    public partial interface IAutoRestParameterGroupingTestService : IDisposable
     {
         /// <summary>
         /// The base URI of the service.
