@@ -21,7 +21,7 @@ namespace Fixtures.Azure.AcceptanceTestsAzureReport
     /// <summary>
     /// Test Infrastructure for AutoRest
     /// </summary>
-    public partial interface IAutoRestReportServiceForAzure
+    public partial interface IAutoRestReportServiceForAzure : IDisposable
     {
         /// <summary>
         /// The base URI of the service.
