@@ -20,7 +20,7 @@ namespace Fixtures.AcceptanceTestsBodyComplex
     /// <summary>
     /// Test Infrastructure for AutoRest
     /// </summary>
-    public partial interface IAutoRestComplexTestService
+    public partial interface IAutoRestComplexTestService : IDisposable
     {
         /// <summary>
         /// The base URI of the service.
