@@ -20,7 +20,7 @@ namespace Fixtures.AcceptanceTestsBodyDate
     /// <summary>
     /// Test Infrastructure for AutoRest
     /// </summary>
-    public partial interface IAutoRestDateTestService
+    public partial interface IAutoRestDateTestService : IDisposable
     {
         /// <summary>
         /// The base URI of the service.
