@@ -20,7 +20,7 @@ namespace Fixtures.AcceptanceTestsReport
     /// <summary>
     /// Test Infrastructure for AutoRest
     /// </summary>
-    public partial interface IAutoRestReportService
+    public partial interface IAutoRestReportService : IDisposable
     {
         /// <summary>
         /// The base URI of the service.
