@@ -21,7 +21,7 @@ namespace Fixtures.MirrorSequences
     /// A sample API that uses a petstore as an example to demonstrate
     /// features in the swagger-2.0 specification
     /// </summary>
-    public partial interface ISequenceRequestResponseTest
+    public partial interface ISequenceRequestResponseTest : IDisposable
     {
         /// <summary>
         /// The base URI of the service.
