@@ -20,7 +20,7 @@ namespace @Settings.Namespace
     /// <summary>
     @WrapComment("/// ", Model.Documentation.EscapeXmlComment())
     /// </summary>
-    public partial interface I@(Model.Name)
+    public partial interface I@(Model.Name) : IDisposable
     {
         /// <summary>
         /// The base URI of the service.
